# chatty

./: .env-example  Cargo.toml  README.md
chat_gpt/: Cargo.toml
chat_gpt/src/: main.rs
ec2/: launch-backend.txt  launch-frontend.txt  readme.md
explorer/: .gitignore  Cargo.toml
explorer/src/: main.rs
llm/: Cargo.toml
llm/src/: main.rs
src/: main.rs
web-client/: index.html
websocket-client/: package-lock.json  package.json
websocket-client/src/: App.css  App.js
