[package]
name = "chatty"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
faker_rand = "0.1.1"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
surrealdb = "2.1.4"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
