[package]
name = "chat_gpt"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["ws"] }
axum-server = "0.7.1"
faker_rand = "0.1.1"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
chrono = "0.4.39"
futures = "0.3.31"

dotenvy = "0.15.7"
async-openai = "0.27.2"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
